--- a/basetemplate.html
+++ b/basetemplate.html
@@ -10,9 +10,8 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/main.nest.css">
-		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
-		<script src="js/modernizr-2.8.3.min.js"></script>
+		<link rel="stylesheet" href="css/content.nest.css">
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -74,16 +73,22 @@
 				</li>
 			</ul>
 	</nav>
-<header>
-		<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-		<div class="sec2">
-		 <p class="accent">What would it really be like<br> to live on the Moon?</p>
-		</div>
+	<header>
+	<div id="Logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
+	</div>
+	<div class="intro">
+			<h1>Title</h1>
+			<p>A brief intro
+			</p>
+	</div>
 </header>
 <div class="container">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
+
+
 			</div>
 		</div>
 	</section>
