--- a/lalande.html
+++ b/lalande.html
@@ -12,7 +12,6 @@
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/content.nest.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
-		<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -28,8 +27,8 @@
 	  </script>
 	  <noscript>
 
-	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
-			 Really, on behalf of The Web, please upgrade to a modern browser and don't turn off Javascript.
+	     Say, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
+			 Really, on behalf of The Web, please upgrade to a modern browser.
 			 Thank you, thank you, thank you.
 			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
 			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
@@ -64,6 +63,8 @@
 				<li><a href="project.html">Project</a>
 					<ul>
 						<li><a href="project.html#chart">Chart</a></li>
+						<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+						<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
 					</ul>
 				</li>
 				<li><a href="learn.html">Learn</a>
@@ -74,23 +75,50 @@
 				</li>
 			</ul>
 	</nav>
-<header>
+	<header>
 	<div id="Logo">
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
 	</div>
 	<div class="intro">
-			<h1>Lalande Crater</h1>
-			<p>Steep walls, riddled with boulders, fields of skree, full of fissures -
-				there are few craters on the Moon like Lalande.
-			</p>
+		<h1>Lalande Crater</h1>
+		<p>Steep walls, riddled with boulders, fields of skree, full of fissures -
+			there are few craters on the Moon like Lalande.
+		</p>
 	</div>
 </header>
 <div class="container">
-  <div class="outerDiv">
-    <div class="innerDiv">
+	<section>
+		<div class="outerDiv"><div class="innerDiv">
+				<div class="pixWrap">
+					<figure class="pix">
+						<img src="img/Apollo16full1200.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+					<figure class="pix">
+						<img src="img/Lunar_Thorium_hotspots.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+					<figure class="pix">
+						<img src="img/LalandeTempDiff.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+					<figure class="pix">
+						<img src="img/Lal-boulders1.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+					<figure class="pix">
+						<img src="img/Lal-boulders2.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+					<figure class="pix">
+						<img src="img/LalandeCrop1500.jpg">
+						<figcaption>captions coming</figcaption>
+					</figure>
+				</div>
+		</div></div>
+	</section>
+</div>
 
-    </div>
-	</div>
-</section>
+
 </body>
 </html>
