--- a/colonies.html
+++ b/colonies.html
@@ -66,6 +66,8 @@
 				<li><a href="project.html">Project</a>
 					<ul>
 						<li><a href="project.html#chart">Chart</a></li>
+						<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+						<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
 					</ul>
 				</li>
 				<li><a href="learn.html">Learn</a>
@@ -134,17 +136,17 @@
 				<h3>Click an image to go to the page on Lalande Crater
 				</h3>
 			</div>
-			<div class="pixWrap">
-				<div class="thumbs">
+			<div class="pixBody">
+				<div class="pix" style="width: 150px;">
 					<img src="img/Thumb-Lunar_Thorium_hotspots.jpg">
 				</div>
-				<div class="thumbs">
+				<div class="pix" style="width: 150px;">
 					<img src="img/Thumb-Lal-boulders2.jpg">
 				</div>
-				<div class="thumbs">
+				<div class="pix" style="width: 150px;">
 					<img src="img/Thumb-LalandeTempDiff.jpg">
 				</div>
-				<div class="thumbs">
+				<div class="pix" style="width: 150px;">
 					<img src="img/Thumb-LalandeCrop.jpg">
 				</div>
 
