--- a/learn.html
+++ b/learn.html
@@ -115,6 +115,7 @@ p {
   						<ul>
   							<li><a href="project.html#chart">Chart</a></li>
 								<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+								<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
   						</ul>
   					</li>
   					<li><a href="learn.html">Learn</a>
