--- a/machines.html
+++ b/machines.html
@@ -67,6 +67,7 @@
   						<ul>
   							<li><a href="project.html#chart">Chart</a></li>
 								<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+								<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
   						</ul>
   					</li>
   					<li><a href="learn.html">Learn</a>
