fix modelProxy sizing, add machines2.html
Former-commit-id: 766db7f52bd60ad9832f6b3dd6912bd43ed28ce8 [formerly 01a2026c0eb358f65747f1ce3845a5332f111856]
Former-commit-id: 519d1ad90a90d0b37380547183dcfea6ebf799ad

--- a/colonies.html
+++ b/colonies.html
@@ -43,7 +43,7 @@
 			<ul>
 			<li><a href="index.html">Mission</a>
 			<ul class="dropdown">
-					<li><a href="index.html#timeline">Timeline</a></li>
+					<li><a href="timeline.html">Timeline</a></li>
 					<li><a href="index.html#sitemap">Site Map</a></li>
 				</ul>
 			</li>
@@ -58,9 +58,9 @@
 				<ul>
 						<li><a href="machines.html#robots">Robots</a></li>
 						<li><a href="machines.html#construction">Construction</a></li>
-						<li><a href="machines.html#power">Power</a></li>
-						<li><a href="machines.html#extraction">Extraction</a></li>
-						<li><a href="machines.html#transport">Transport</a></li>
+						<li><a href="machines2.html#power">Power</a></li>
+						<li><a href="machines2.html#extraction">Extraction</a></li>
+						<li><a href="machines2.html#transport">Transport</a></li>
 					</ul>
 				</li>
 				<li><a href="project.html">Project</a>
@@ -77,8 +77,7 @@
 					</ul>
 				</li>
 			</ul>
-	</nav>
-<header>
+	</nav><header>
 	<div id="Logo">
 		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
 	</div>
