--- a/machines.html
+++ b/machines.html
@@ -43,7 +43,7 @@
   				<ul>
   				<li><a href="index.html">Mission</a>
  		 			<ul class="dropdown">
- 		 					<li><a href="index.html#timeline">Timeline</a></li>
+ 		 					<li><a href="timeline.html">Timeline</a></li>
  		 					<li><a href="index.html#sitemap">Site Map</a></li>
  		 				</ul>
   				</li>
@@ -58,9 +58,9 @@
   					<ul>
   							<li><a href="machines.html#robots">Robots</a></li>
   							<li><a href="machines.html#construction">Construction</a></li>
-  							<li><a href="machines.html#power">Power</a></li>
-  							<li><a href="machines.html#extraction">Extraction</a></li>
-  							<li><a href="machines.html#transport">Transport</a></li>
+  							<li><a href="machines2.html#power">Power</a></li>
+  							<li><a href="machines2.html#extraction">Extraction</a></li>
+  							<li><a href="machines2.html#transport">Transport</a></li>
   						</ul>
   					</li>
   					<li><a href="project.html">Project</a>
@@ -106,7 +106,7 @@
 				do construction entirely without humans present. Such robots do not yet
 				exist, but the field is advancing quickly. Development of that
 				technology has a wealth of applications here on Earth, it would make
-				sense to make such R&D a central part of a settlement space program.
+				sense to make such R&amp;D a central part of a settlement space program.
 				A few missions
 				would be needed where a minimal crew go to support the prototype robots,
 				testing and fixing them, until there is confidence the robots can be
@@ -339,5 +339,7 @@
 			We'd like to know what you think - comment section coming...
 		</div>
 	</section>
+</div>
+
 </body>
 </html>
