--- a/machines2.html
+++ b/machines2.html
@@ -80,45 +80,89 @@
 		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
 	</div>
 	<div class="intro">
-		<h1>Lalande Crater</h1>
-		<p>Steep walls, riddled with boulders, fields of skree, full of fissures -
-			there are few craters on the Moon like Lalande.
-		</p>
+			<h1>Machines for a Lunar Economy</h1>
+			<p>These sections focus on the machines that come to the
+				fore once you've built the first permanent habs. To make
+				it all work you have to scale up as quickly as possible so
+				you have products you can sell, and lower your costs as
+				much as possible by using local resources to the maximum.
+				These machines achieve that.
+			</p>
 	</div>
 </header>
-<div class="container">
+<div class="container" id="power">
 	<section>
-		<div class="outerDiv"><div class="innerDiv">
-				<div class="pixWrap">
-					<figure class="pix">
-						<img src="img/Apollo16full1200.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-					<figure class="pix">
-						<img src="img/Lunar_Thorium_hotspots.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-					<figure class="pix">
-						<img src="img/LalandeTempDiff.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-					<figure class="pix">
-						<img src="img/Lal-boulders1.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-					<figure class="pix">
-						<img src="img/Lal-boulders2.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-					<figure class="pix">
-						<img src="img/LalandeCrop1500.jpg">
-						<figcaption>captions coming</figcaption>
-					</figure>
-				</div>
-		</div></div>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h1>Power Plants</h1>
+				<p>
+					Unless you go back to plans from the 70s, reference to
+					nuclear power has completely disappeared from proposals
+					for the Moon. This is unfortunate, as nuclear power is
+					constant day and night, small modular plants are extremely
+					simple to deploy, and safety is quite easy. At the poles,
+					sunlight is nearly constant on certain mountain peaks,
+					making solar power a good alternative to nuclear.
+					Anywhere else,
+					to set up a settlement you need nuclear power. Nuclear is
+					a really good idea on the Moon. Here, it is used while
+					the initial colony at Lalande, Cernan's Promise, gets
+					going.
+				</p>
+				<p>
+					Later on, once Cernan's Promise has developed the
+					infrastructure, it can start extracting thorium from
+					minerals in and around the crater and produce nuclear
+					fuel on-site instead of importing it from Earth. But
+					that wouldn't really be for power plants - it would be
+					for nuclear rockets. Unless technology like Mach drives
+					manages to produce high-thrust engines based on completely
+					new science, nuclear engines will continue to be the
+					best transport option between the surface of a celestial
+					body and orbit. (Unless you've managed to build a space
+					elevator... and not if the body has an atmosphere and
+					someone lives there... there are a few wrinkles.)
+				</p>
+				<p>
+					The main power source once Lalande has a genuine town,
+					and later for the city, isn't nuclear or solar panels.
+					It's turbines running on stored solar heat. Specifically,
+					closed Brayton cycle turbines, using
+					super-critical carbon dioxide, heated by a mass of molten
+					regolith, which in turn is heated by tubes filled with
+					molten salts that circulate through a trough of
+					parabolic mirrors. 
+
+				</p>
+			</div>
+		</div>
 	</section>
+	<aside>
+	</aside>
 </div>
+<div class="container" id="extraction">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
 
 
+			</div>
+		</div>
+	</section>
+	<aside>
+	</aside>
+</div>
+<div class="container" id="transport">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+
+
+			</div>
+		</div>
+	</section>
+	<aside>
+	</aside>
+</div>
 </body>
 </html>
