--- a/learn.html
+++ b/learn.html
@@ -87,45 +87,45 @@ p {
 
 	  </noscript>
 	<![endif]-->
-	  	<nav>
-  				<ul>
-  				<li><a href="index.html">Mission</a>
- 		 			<ul class="dropdown">
- 		 					<li><a href="index.html#timeline">Timeline</a></li>
- 		 					<li><a href="index.html#sitemap">Site Map</a></li>
- 		 				</ul>
-  				</li>
-  				<li><a href="colonies.html">Colonies</a>
-  					<ul class="dropdown">
-  							<li><a href="colonies.html#lalande">Lalande</a></li>
-  							<li><a href="colonies.html#peary">Peary</a></li>
-  							<li><a href="colonies.html#orbital">Orbital</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="machines.html">Machines</a>
-  					<ul>
-  							<li><a href="machines.html#robots">Robots</a></li>
-  							<li><a href="machines.html#construction">Construction</a></li>
-  							<li><a href="machines.html#power">Power</a></li>
-  							<li><a href="machines.html#extraction">Extraction</a></li>
-  							<li><a href="machines.html#transport">Transport</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="project.html">Project</a>
-  						<ul>
-  							<li><a href="project.html#chart">Chart</a></li>
-								<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
-								<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="learn.html">Learn</a>
-  						<ul>
-  							<li><a href="learn.html#interactives">Interactives</a></li>
-  							<li><a href="learn.html#lessons">Lessons</a></li>
-  						</ul>
-  					</li>
-  				</ul>
-  		</nav>
+	<nav>
+			<ul>
+			<li><a href="index.html">Mission</a>
+			<ul class="dropdown">
+					<li><a href="timeline.html">Timeline</a></li>
+					<li><a href="index.html#sitemap">Site Map</a></li>
+				</ul>
+			</li>
+			<li><a href="colonies.html">Colonies</a>
+				<ul class="dropdown">
+						<li><a href="colonies.html#lalande">Lalande</a></li>
+						<li><a href="colonies.html#peary">Peary</a></li>
+						<li><a href="colonies.html#orbital">Orbital</a></li>
+					</ul>
+				</li>
+				<li><a href="machines.html">Machines</a>
+				<ul>
+						<li><a href="machines.html#robots">Robots</a></li>
+						<li><a href="machines.html#construction">Construction</a></li>
+						<li><a href="machines2.html#power">Power</a></li>
+						<li><a href="machines2.html#extraction">Extraction</a></li>
+						<li><a href="machines2.html#transport">Transport</a></li>
+					</ul>
+				</li>
+				<li><a href="project.html">Project</a>
+					<ul>
+						<li><a href="project.html#chart">Chart</a></li>
+						<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+						<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
+					</ul>
+				</li>
+				<li><a href="learn.html">Learn</a>
+					<ul>
+						<li><a href="learn.html#interactives">Interactives</a></li>
+						<li><a href="learn.html#lessons">Lessons</a></li>
+					</ul>
+				</li>
+			</ul>
+	</nav>
 			<header>
 				<div id="Logo">
 					<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
