--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
 			<ul>
 			<li><a href="index.html">Mission</a>
 			<ul class="dropdown">
-					<li><a href="index.html#timeline">Timeline</a></li>
+					<li><a href="timeline.html">Timeline</a></li>
 					<li><a href="index.html#sitemap">Site Map</a></li>
 				</ul>
 			</li>
@@ -55,9 +55,9 @@
 				<ul>
 						<li><a href="machines.html#robots">Robots</a></li>
 						<li><a href="machines.html#construction">Construction</a></li>
-						<li><a href="machines.html#power">Power</a></li>
-						<li><a href="machines.html#extraction">Extraction</a></li>
-						<li><a href="machines.html#transport">Transport</a></li>
+						<li><a href="machines2.html#power">Power</a></li>
+						<li><a href="machines2.html#extraction">Extraction</a></li>
+						<li><a href="machines2.html#transport">Transport</a></li>
 					</ul>
 				</li>
 				<li><a href="project.html">Project</a>
