content machines2.html
Former-commit-id: 6a55d842a9bb3e22060378c329c311f1d3b5eb93 [formerly 60da792285b0608bf6bb3e3732516202746e0ade]
Former-commit-id: a2e3deb66b3a21a48df1b426b348960d12f3e40d

--- a/machines.html
+++ b/machines.html
@@ -338,6 +338,9 @@
 		<div class="SF-Div">
 			We'd like to know what you think - comment section coming...
 		</div>
+		<div class="SF-Div">
+			On to <a href="machines2.html">Power, Extraction, and Transport</a>
+		</div>
 	</section>
 </div>
 
