--- a/machines2.html
+++ b/machines2.html
@@ -94,7 +94,7 @@
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-				<h1>Power Plants</h1>
+				<h1>Power Infrastructure</h1>
 				<p>
 					Unless you go back to plans from the 70s, reference to
 					nuclear power has completely disappeared from proposals
@@ -127,25 +127,164 @@
 					The main power source once Lalande has a genuine town,
 					and later for the city, isn't nuclear or solar panels.
 					It's turbines running on stored solar heat. Specifically,
-					closed Brayton cycle turbines, using
-					super-critical carbon dioxide, heated by a mass of molten
+					closed Brayton cycle turbines using a gaseos working fluid,
+ 					heated by a mass of molten
 					regolith, which in turn is heated by tubes filled with
 					molten salts that circulate through a trough of
-					parabolic mirrors. 
-
+					parabolic mirrors. These are being called the Thermal
+					Energy Storage Systems - the TESS.
+				</p>
+				<p>
+					The reservoirs of molten regolith these systems produce
+					are useful. Important volatiles such as
+					oxides of potassium, phosphate, and sodium boil off
+					them and are collected. If operated
+					at a high enough temperature, vapors of pure oxygen
+					could also be collected. The systems are sized to have extra
+					capacity so that some of the lava produced can be drawn
+					off for use elsewhere - such as to supply the dust roasters,
+					or as pre-processed feedstock for reactors making glass. The
+					heat reservoir would thus need to be resupplied with fresh
+					regolith as its contents are drawn off or boil off. Any
+					regolith will do, so it can function as a giant cauldron
+					contantly stewing a regolith soup. By adjusting the
+					minerology of the ingredients and how long the contents are
+					left to boil, the chemistry of the lava can be tuned to best
+					serve the needs of the furnaces and reactors
+					that later use it.
+				</p>
+				<p>
+					Some of the components for TESS units are simple and can
+					be produced on-site early in colony development - mirrors,
+					turbine housings, radiator units. A while later the pipes,
+					turbine blades, and generators can also be made there.
+					Production of efficient working units made entirely locally
+					seems feasible sooner than the same goal for solar panels or
+					nuclear plants, especially if early units work
+					at lower temperatures.
+				</p>
+			</div>
+			<div class="innerDiv">
+				<p>
+					We'll come back to nuclear reactor designs in the Transportation
+					section below, but there is a link in the sidebar to a very good
+					overview of the matter, in power-point format. The current
+					model Moonwards has for a nuclear plant on the
+					lunar surface is quite crude. Expanding it into a
+					good representation of a working reactor in space would be great
+					for educational purposes. That is a goal for all the models of
+					course, but as nuclear generators are so very misunderstood it
+					is especially appealing to make that model. (Alas, i don't know
+					how to interpret and adapt the drawings i've found of such
+					things very well. When i work next work on it i'll seek consultations
+					on the matter.)
+				</p>
+				<p>
+					On slide 35 is a great comparison: "Standing next to a
+					NTP [Nuclear Thermal Propulsion] engine before launch
+					for one year is less radiation than a diagnostic x-ray".
 				</p>
 			</div>
 		</div>
 	</section>
 	<aside>
+		<figure class="sideDiv">
+			<img src="img/ThermalStorePaper.jpg">
+			<figcaption><a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19920005262.pdf">
+				Analysis of Lunar Regolith Thermal Energy Storage</a>, a paper by Anthony
+				Colozza for the Lewis Research Center under contract to NASA, 1991. It
+				examines running pipes into the ground on the Moon and heating it - how
+				the heat moves, the temperature fluctuations over a full day, and system
+				efficiency.
+			</figcaption>
+		</figure>
+		<figure class="sideDiv">
+			<img src="img/BraytonTurbineForSpace.png">
+			<figcaption><a href="https://ntrs.nasa.gov/search.jsp?R=20100026654&hterms=brayton+generator&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dbrayton%2Bgenerator">
+				Closed Brayton Cycle Power Conversion Unit</a> by Robert L Fuller, a paper for
+				the Glenn Research Center under contract to NASA, 2010. This was based on the
+				heat source being a small nuclear reactor, so a number of parameters are
+				different than contemplated for the colony, but the basic system would be
+				similar. This paper will be used to make a much improved model of the
+				turbine structures.
+		</figure>
+		<figure class="sideDiv">
+			<img src="img/NuclearSlidesHouts.jpg">
+			<figcaption>
+				<a href="https://ntrs.nasa.gov/search.jsp?R=20160004957&hterms=nuclear+fission+generator&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dnuclear%2Bfission%2Bgenerator">
+					An overview of the science and history of nuclear power and propulsion for space</a>. This slide show was for the Kilopower
+					project, which is working on a modern compact nuclear plant.
+			</figcaption>
+		</figure>
 	</aside>
+</div>
+<div class="container_SF_iframe">
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy22.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
 </div>
 <div class="container" id="extraction">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-
-
+				<h1>Extraction: Mining and Refining Elements and Compounds</h1>
+				<p>
+					The Moon has a marked tendency to either have lots of something, or
+					none at all of something. Once we are able to really dig around there
+					is reason to hope we will find some stuff there is no sign of on the
+					surface. For the first years, it is prudent to assume what you have to
+					work with is only what has been proven to be there.
+				</p>
+				<p>
+					That list is adequate for a lot of things, but some ingenuity will be
+					required to turn it into all we need for survival. Every
+					way we process ore must be reinvented to suit the Moon.
+					The chemicals most used in batch reactions to refine out certain products -
+					acids and bases - are entirely absent from the Moon. If water and other
+					volatiles were extracted from the poles in sufficient quantity, some
+					of those chemicals could be made. That will take time and the resulting
+					resources will be precious for much longer. The more water
+					and nitrogen and carbon chemicals you use in materials processing,
+					the less you have for farming and living spaces. It will likely be a
+					long time before volatile mining can satisfy all local demands.
+					Chemical catalysts can be imported from
+					Earth and carefully recycled, but a bit will be lost in each batch and
+					more will need to be imported regularly. Ways to use plentiful local
+					resources to reduce reliance on these chemicals are important.
+				</p>
+				<p>
+					The alternative to using chemicals for refining processes is using
+					energy. It takes a lot of it and comes with challenges of its own.
+					This is the approach taken by the dust roaster shown
+					in the next section. This one
+					device can do a lot. It produces a range of
+					pure metals, pure oxygen, slag that makes good refractory materials,
+					and a vapor byproduct that can be applied as a hard coating and sealant on
+					objects placed at the machine's outlet. Because any kind of
+					uprocessed regolith that is put into a dust roaster comes out as
+					100% useful products, it is reasonable to calculate it outcompetes
+					batch methods based on chemicals despite using a lot of energy to
+					do so. By filling its hopper with extra-hot lava melted in the MIP
+					stations or from solar thermal power plants, its power needs can also
+					be considerably reduced.
+				</p>
+				<p>
+					What the dust roaster can't provide is pure metal oxides. That is the
+					unresolved issue that really hangs in the air. Building big and
+					beautiful on the Moon takes a lot of glass, and making glass takes a
+					very specific mix of metal oxides. There are a range of formulas for
+					different kinds of glass, and they can stand a small amount of
+					impurities. None of those formulas are close to the mineral
+					composition of anything found on the Moon. Getting from what there is
+					to what is needed requires either heating a suitable feedstock so
+					hot for so long that most of it evaporates, or using an awuful lot of
+					water and chemicals. The consistent, strong sun can easily do the
+					heating with simple mirrors or lenses. The challenge is figuring out
+					how to control that so specific substances can be collected, and
+					the infrastructure can handle the heat.
+				</p>
 			</div>
 		</div>
 	</section>
