content for machines2 and lalande
Former-commit-id: 627e92acdc36c3d0924e5268d19694ee9e8ddceb

--- a/basetemplate.html
+++ b/basetemplate.html
@@ -95,7 +95,18 @@
 	<aside>
 	</aside>
 </div>
+<div class="container">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
 
+
+			</div>
+		</div>
+	</section>
+	<aside>
+	</aside>
+</div>
 
 </body>
 </html>
