--- a/lalande.html
+++ b/lalande.html
@@ -82,7 +82,10 @@
 	<div class="intro">
 		<h1>Lalande Crater</h1>
 		<p>Steep walls, riddled with boulders, fields of skree, full of fissures -
-			there are few craters on the Moon like Lalande.
+			there are few craters on the Moon like Lalande. This page gets about as
+			nerdy as possible about lunar geography. I bet there is no place else in
+			the solar system (beyond Earth) that has a fan page
+			like this. Prepare for the full nerd treatment.
 		</p>
 	</div>
 </header>
@@ -92,7 +95,28 @@
 				<div class="pixWrap">
 					<figure class="pix">
 						<img src="img/Apollo16full1200.jpg">
-						<figcaption>captions coming</figcaption>
+						<figcaption>This is the far north end of a frame taken by the
+						<a href="http://www.lpi.usra.edu/lunar/missions/apollo/apollo_16/experiments/mpc/">
+							Apollo 16</a><a href="https://history.nasa.gov/afj/simbaycam/itek-pan-camera.htm">
+								 panoramic camera</a>. Each frame covers a
+						 ground area 320 km long and 20 km wide, with the smallest detail
+					 recorded being about 2 m across - almost as good as the resolution
+				  of the Lunar Reconnaissance orbiter, whose best images have pixels
+				equal to 50 cm on the ground.</figcaption>
+					</figure>
+					<p>
+						The Apollo 16 service module took 1435 images of the lunar surface
+						during its 3 days in lunar orbit. The image above is from one of
+						two taken of the area during the last orbit recording these photos.
+						It shows about a tenth of the full image.
+						These photos were designed to be combined in pairs to produce a
+						stereoscopic image of the surface - the kind that look 3D when
+						viewed with those red-and-blue lenses. (Yes, i'll do that when i
+						have a chance and figure out how.) The full images from this
+						camera looked like the one below, which is the pair of the image
+						above:
+					</p>
+					<figure class="pix">
 					</figure>
 					<figure class="pix">
 						<img src="img/Lunar_Thorium_hotspots.jpg">
