--- a/machines.html
+++ b/machines.html
@@ -251,17 +251,34 @@
 					If you can build there, you have something you can
 					sell. If you are good at it, you can build for space, too,
 					and that's our whole idea.
-					<br><br>
+				</p>
+					<p>
 					All construction designs here are centered around the use
 					of melted regolith, in particular the basalt of the lunar
 					maria. When basalt is drawn into fibers it has
 					good tension strength. A material that is strong in tension
 					is the key to space development. Holding in an atmosphere
-					requires it. Possibly the minerals of the highlands could
-					also be melted and spun into glass fibers with decent
-					strength. Glass fibers on Earth can't bear much tension,
-					but the different chemistry of lunar minerals may mean they
-					have much higher tensile strength.
+					requires it. Basalt rope and cloth can be made
+					with no additives other than a thin application of a
+					sizing chemical to the surface of the threads. This
+					makes construction with basalt much easier.
+					<br><br>
+					Some highlands materials spun into fibers will also
+					have good tension strength, but likely need to
+					be processed to change their chemical composition
+					before that is true, and such processing would take
+					considerable infrastructure. Once they are, they might
+					also need to be embedded in a matrix, like fiberglass
+					is embedded in plastics on Earth. Glass fibers aren't
+					used for rope or fabric on Earth because it only takes
+					slight damage to cause the fibers to lose their
+					strength. On the other hand, quite possibly the
+					different chemistry and environment of the Moon means
+					that they would work well without needing a
+					protective matrix. Still, unless deposits very high
+					in silica are found, resource-intensive processing
+					will be needed in the highlands to produce
+					materials capable of containing an atmosphere.
 					<br><br>
 					All these designs absolutely depend on the use of agile
 					robots. They don't have to be carpenters, but they do
@@ -324,11 +341,7 @@
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</section>
-	<section class="framewrap frame16x9">
-					<iframe src="modelProxy19.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-					</iframe>
-	</section>
+
 	<section class="framewrap frame16x9">
 					<iframe src="modelProxy20.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
