--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		<link rel="stylesheet" href="css/main.nest.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+<script>
+	 $(document).ready(function() {
+			 $('.tooltip').tooltipster();
+	 });
+</script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
