--- a/machines.html
+++ b/machines.html
@@ -14,8 +14,15 @@
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/content.nest.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
-	</head>
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+		<script>
+			 $(document).ready(function() {
+					 $('.tooltip').tooltipster();
+			 });
+	 </script>
+</head>
 <body>
 	<!--[if lt IE 9]>
 	  <script>
